--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,7 +1,8 @@
-/* General
+/* Defaults
 ---------------------------------------------- */
 
 body {
+	min-width: 320px;
 	margin: 0;
 	padding: 0;
 	background: #58616b;
@@ -121,7 +122,7 @@ img {
 
 
 #album {
-	padding: 0 60px;
+	margin: 0 68px;
 	text-align: center;
 	font-size: 30px;
 	line-height: 50px;
