Rename photo selector

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -147,7 +147,7 @@ img {
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#1e8e8e8, endColorstr=#1b8b7b6)";	
 }
 
-#frame .image {
+#frame .photo {
 	max-height: 420px;
 	padding: 6px;
 	background: white;
