--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		</div>
 	</div>
 	<div id="frame">
-		<img class="image" />
+		<img class="photo" />
 		<div class="title"></div>
 		<div class="data"></div>
 	</div>
