--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<title>Photo Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}" type="text/css" media ="screen"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.min.css') }}" type="text/css" media ="screen"/>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="{{ url_for("static", filename="js/jquery-1.10.2.min.js") }}"><\/script>')</script>
@@ -14,7 +14,7 @@
 		image1 = new Image(574, 434)
 		image1.src = "{{ url_for('static', filename='test_images/image1.jpg') }}"
 	</script>
-	<script src="{{ url_for('static', filename='js/gallery.js') }}" type="text/javascript"></script>
+	<script src="{{ url_for('static', filename='js/gallery.min.js') }}" type="text/javascript"></script>
 </head>
 <body>
 	{% block body %}{% endblock %}
