--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -173,6 +173,12 @@ img {
 	-o-box-shadow: inset 0 1px rgba(255,255,255,.45), 0 -1px 0px #40434A;
 	box-shadow: inset 0 1px rgba(255,255,255,.45), 0 -1px 0px #40434A;
 	overflow: hidden;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 
@@ -192,12 +198,14 @@ img {
 	border: 40px solid transparent;
 }
 
-.slider .prev {right: 100%;border-right: 25px solid rgba(255,255,255,.2);border-left: none;}
-.slider .next {left: 100%;border-left: 25px solid rgba(255,255,255,.2);border-right: none;}
-.slider .prev:hover {border-right-color: rgba(255,255,255,.3);}
-.slider .next:hover {border-left-color: rgba(255,255,255,.3);}
-.slider .prev:active {border-right-color: rgba(255,255,255,.4);}
-.slider .next:active {border-left-color: rgba(255,255,255,.4);}
+.slider .prev {right: 100%;border-right: 25px solid rgba(255,255,255,.35);border-left: none;}
+.slider .next {left: 100%;border-left: 25px solid rgba(255,255,255,.35);border-right: none;}
+.slider .prev:hover {border-right-color: rgba(255,255,255,.4);}
+.slider .next:hover {border-left-color: rgba(255,255,255,.4);}
+.slider .prev:active {border-right-color: rgba(255,255,255,.5);}
+.slider .next:active {border-left-color: rgba(255,255,255,.5);}
+.slider .prev.disable {border-right-color: rgba(255,255,255,.1); cursor: default;}
+.slider .next.disable {border-left-color: rgba(255,255,255,.1); cursor: default;}
 
 /* Thumbnails
 ---------------------------------------------- */
