Add alternative stylesheet

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,11 @@
 	<title>Photo Gallery</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.min.css') }}" type="text/css" media ="screen"/>
+  <link href='http://fonts.googleapis.com/css?family=Lato|Meddon' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/original.min.css') }}" type="text/css" media="screen"/>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="{{ url_for("static", filename="js/jquery-1.10.2.min.js") }}"><\/script>')</script>
-	<script type="text/javascript">$ROOT = {{ request.script_root|tojson|safe }};</script>
 	<script type="text/javascript">
 		// Preload first photo
 		image1 = new Image(574, 434)
