--- a/static/css/original.css
+++ b/static/css/original.css
@@ -68,6 +68,7 @@ img {
 	-o-box-shadow: inset 0 0px 4px rgba(255,255,255,.2);
 	box-shadow: inset 0 0px 4px rgba(255,255,255,.2);
 	cursor: pointer;
+	outline: none;
 }
 
 #nav button:before {
